_scss/templates/_about-section2.scss
.about-section2 {
  @include display_flex();
  @include flex_flex-wrap(wrap);
  @include flex_flex-direction(column);
  @include flex_justify-content(center);
  padding: 25px 10px;
  line-height: 1.8rem;

  @include mq($from: tablet) {
    padding: 30px 50px;
  }

  .ceo {
    position: relative;
    @include display_flex();
    @include flex_flex-direction(row);
    @include flex_justify-content(space-between);

    &-picture {
      // margin-right: 50px;
    }

    &-resume {
      position: relative;
      @include flex_flex(1 1 auto);
      margin-left: 60px;
      padding-top: 100px;

      li {
        margin-bottom: .5rem;
        font-style: italic;
      }

      p {
        margin: 1.5rem 0;
        font-size: 16px;
        font-weight: 300;
        line-height: 1.5rem;
      }
    }

    &-name {
      position: absolute;
      top: 20px;
      left: -120px;
      z-index: map-get($Z-LAYERS, default);

      h2,
      span {
        margin: 0; 
        padding: 0;
      }
      h2 { 
        font-size: 28px;
        font-weight: 700; 
      }
      span { 
        font-size: 17px;
        font-weight: 300;
      }
    }

    &-education {
      display: block;
      width: 100%;
    }
  }

  .bio {
    position: relative;
    @include display_flex();
    // @include flex_flex-wrap(wrap);
    @include flex_flex-direction(column);
    @include flex_justify-content(space-between);
    margin-top: 30px;

    @include mq($from: tablet) {
      @include flex_flex-direction(row);
      @include flex_justify-content(space-between);
    }

    .facts {
      @include flex_flex(1 0 100%);
      margin: 20px 0;
      min-width: 300px;
      text-align: left;

      @include mq($from: tablet) {
        @include flex_flex(1 1 30%);
        margin: 0 20px;
      }
    }

    h3 {
      font-size: 19px;
      font-weight: 700; 
    }
  }
}

